@@ -44,6 +44,6 @@ obj-$(CONFIG_PCMCIA_WL3501)	+= wl3501_cs.o
 
 obj-$(CONFIG_USB_ZD1201)	+= zd1201.o
 
-obj-$(CONFIG_RT2860V2_AP)       += rt2860v2/rt2860v2_ap/
-obj-$(CONFIG_RT2860V2_STA)      += rt2860v2/rt2860v2_sta/
-obj-$(CONFIG_RT3090_AP)         += RT3090_ap/
+#obj-$(CONFIG_RT2860V2_AP)       += rt2860v2/rt2860v2_ap/
+#obj-$(CONFIG_RT2860V2_STA)      += rt2860v2/rt2860v2_sta/
+#obj-$(CONFIG_RT3090_AP)         += RT3090_ap/
